added about me section to home page

--- a/force-app/main/default/lwc/hero/hero.html
+++ b/force-app/main/default/lwc/hero/hero.html
@@ -6,7 +6,7 @@
     <div class="call-to-action container">
         <h1> My name is Rickson Dsilva</h1>
         <p>let's do bussiness together!</p>
-        <button>contact me</button>
+       <c-contact-me-button></c-contact-me-button>
     </div>
    
 </template>
