Not the final commit.

--- a/force-app/main/default/lwc/aboutMe/aboutMe.html
+++ b/force-app/main/default/lwc/aboutMe/aboutMe.html
@@ -1,19 +1,24 @@
 <template>
-    <h1>About Me</h1>
-   
-    <div class="container">
-            <div class="img-container">
-                <img src={aboutMeImageURL}>
-            </div>
-            <div class="text-container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempora qui, architecto nobis nesciunt sapiente sunt 
-                    accusamus ea id tempore totam autem labore praesentium iste illum unde temporibus tenetur adipisci vel dignissimos quasi 
-                    quae ut! Eaque voluptate perspiciatis quis et facere iste ipsam, saepe vitae porro debitis omnis, sint quidem illum? Ratione 
-                    rerum deleniti, dicta neque aspernatur numquam a rem animi accusamus esse natus nam quod dolore amet accusantium officia molestias 
-                    voluptate labore aliquid impedit, praesentium adipisci? Quae asperiores neque eius officia suscipit quos animi reiciendis 
-                    minima voluptatem culpa fugit libero dolores a, alias laboriosam, quisquam quia porro, unde reprehenderit.</p>
-            </div>
+    <div class="outer-container">
+
+        <a name="about"></a>
+        <h1>About Me</h1>
        
+        <div class="container">
+                <div class="img-container">
+                    <img src={aboutMeImageURL}>
+                </div>
+                <div class="text-container">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempora qui, architecto nobis nesciunt sapiente sunt 
+                        accusamus ea id tempore totam autem labore praesentium iste illum unde temporibus tenetur adipisci vel dignissimos quasi 
+                        quae ut! Eaque voluptate perspiciatis quis et facere iste ipsam, saepe vitae porro debitis omnis, sint quidem illum? Ratione 
+                        rerum deleniti, dicta neque aspernatur numquam a rem animi accusamus esse natus nam quod dolore amet accusantium officia molestias 
+                        voluptate labore aliquid impedit, praesentium adipisci? Quae asperiores neque eius officia suscipit quos animi reiciendis 
+                        minima voluptatem culpa fugit libero dolores a, alias laboriosam, quisquam quia porro, unde reprehenderit.</p>
+                </div>
+           
+        </div>
     </div>
+  
   
 </template>
