--- a/force-app/main/default/lwc/hero/hero.html
+++ b/force-app/main/default/lwc/hero/hero.html
@@ -1,12 +1,18 @@
 
 <template>
-  <div class="container"> <img src={imageURL} alt="'"></div>
+  <div class="outer-container">
+
+    <div class="container"> <img src={imageURL} alt="'"></div>
    
 
     <div class="call-to-action container">
-        <h1> My name is Rickson Dsilva</h1>
-        <p>let's do bussiness together!</p>
+        <h1> My name is Rickson D'Silva</h1>
+        <p>Software Developer Engineer</p>
+        <p>Let's do bussiness together!</p>
        <c-contact-me-button></c-contact-me-button>
     </div>
+
+  </div>
+ 
    
 </template>
